@@ -111,6 +111,26 @@
       The <b>FPS Text Box</b> will change the frame rate of the current animation.
       </p>
 
+      <h3> Loop Checkbox </h3>
+
+      <p>
+      The <b>Loop Checkbox</b> will change whether the current animation loops when it
+      completes or not.  If the animation completes and the <b>Loop Checkbox</b>
+      is checked, the animation will restart from the first frame.  If the animation
+      completes and the <b>Loop Checkbox</b> is not checked, the animation
+      will stop.
+      </p>
+
+      <p>
+      If you have <b>loop</b> checked, skeletal animation keyframe interpolation
+      will wrap to the first frame.  This interpolation begins on the last keyframe set
+      for a given joint and ends on the first keyframe for that joint.
+      If you have an animation with 10 frames and a rotation keyframe
+      on Joint A for frames 1 and 10, then the animation will interpolate
+      from 1 to 10, and then from 10 to 1.  If Joint B has keyframes in frames 3 and 7,
+      it will interpolate from 3 to 7, and then again from 7 to 3.
+      </p>
+
       <h3> Copy/Paste/Clear Frame </h3>
 
       <p>
@@ -144,26 +164,6 @@
       The <b>Stop</b> button will stop a running animation.  An animation
       that is stoped and then played again will play starting from the 
       first frame.
-      </p>
-
-      <h3> Loop Checkbox </h3>
-
-      <p>
-      The <b>Loop Checkbox</b> controls whether the animation loops when it
-      completes or not.  If the animation completes and the <b>Loop Checkbox</b>
-      is checked, the animation will restart from the first frame.  If the animation
-      completes and the <b>Loop Checkbox</b> is not checked, the animation
-      will stop.
-      </p>
-
-      <p>
-      If you have <b>loop</b> checked, skeletal animation keyframe interpolation
-      will wrap to the first frame.  This interpolation begins on the last keyframe set
-      for a given joint and ends on the first keyframe for that joint.  
-      If you have an animation with 10 frames and a rotation keyframe
-      on Joint A for frames 1 and 10, then the animation will interpolate
-      from 1 to 10, and then from 10 to 1.  If Joint B has keyframes in frames 3 and 7, 
-      it will interpolate from 3 to 7, and then again from 7 to 3.
       </p>
 
       <h3> Close </h3>
